<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context=".Myprofile"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/mike"
        app:srcCompat="@drawable/mike" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textSize="36sp"
        app:fontFamily="@font/nova_round" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#050505" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="6dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/track"
            android:textSize="24sp"
            app:fontFamily="@font/nova_round"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="345dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/country"
            android:textSize="24sp"
            app:fontFamily="@font/nova_round"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="475dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/email"
            android:textSize="24sp"
            app:fontFamily="@font/nova_round"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="524dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/phone"
            android:textSize="24sp"
            app:fontFamily="@font/nova_round"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="524dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/slack"
            android:textSize="24sp"
            app:fontFamily="@font/nova_round"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="426dp" />

    </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>